--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <title>Basics of Game Dev</title>
     <script src="phaser.min.js"></script>
-    <script src="game.js"></script>
+    <script src="spaceGame.js"></script>
 </head>
 
 <body>
